[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_derive = "1.0.202"
crossbeam-channel = "0.5.13"
async-stream = "0.3.5"
futures-util = "0.3.30"
async-graphql = { version = "7.0.6", features = ["unblock"] }
bytes = "1.6.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
ulid = "1.1.2"
